--- a/packages/theme-default/salad.config.json
+++ b/packages/theme-default/salad.config.json
@@ -8,7 +8,7 @@
         "descendent": "e"
       },
       "separators": {
-        "descendent": "__",
+        "descendent": "-",
         "modifier": "--"
       }
     }
