--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "vvui",
+  "name": "xview",
   "version": "1.1.0",
   "description": "This is a UI components for Vue 2.x ",
-  "author": "monkey-wang <2424880409@qq.com>",
+  "author": "",
   "main": "packages/index.js",
   "private": false,
   "scripts": {
