--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
 .DS_Store
 node_modules/
-/dist/
-.history/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-/src/views/pages.js
-/src/views/menus.json
-/src/views/docs/*/index.vue
-/src/views/docs/*/*/index.vue
-
+dist/
+history/
 # Editor directories and files
 .idea
 .vscode
-.history
-.backup
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
+.history
+/.project
+package.json
